--- a/database_mockup/src/animalkeeping/ui/fxml/HousingView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/HousingView.fxml
@@ -2,14 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeTableColumn?>
 <?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.layout.HBox?>
@@ -31,23 +28,23 @@
                     <columns>
                         <TreeTableColumn fx:id="unitsColumn" maxWidth="1.7976931348623157E308" prefWidth="75.0" text="unit" />
                       <TreeTableColumn fx:id="typeColumn" maxWidth="1.7976931348623157E308" prefWidth="75.0" text="type" />
-                        <TreeTableColumn fx:id="dimensionColumn" maxWidth="1.7976931348623157E308" prefWidth="224.0" text="dimensions" />
+                        <TreeTableColumn fx:id="dimensionColumn" maxWidth="1.7976931348623157E308" prefWidth="75.0" text="dimensions" />
                         <TreeTableColumn fx:id="populationColumn" maxWidth="1.7976931348623157E308" prefWidth="75.0" text="population" />
                         <TreeTableColumn fx:id="descriptionColumn" maxWidth="1.7976931348623157E308" prefWidth="75.0" text="description" />
                     </columns>
                   </TreeTableView>
                </content>
             </ScrollPane>
-            <ScrollPane fx:id="tabScrollPane">
-              <content>
-                  <TabPane fx:id="plotTabPane" tabClosingPolicy="UNAVAILABLE">
+            <VBox fx:id="tabVBox">
+               <children>
+                  <TabPane fx:id="plotTabPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" tabClosingPolicy="UNAVAILABLE">
                     <tabs>
                       <Tab fx:id="populationTab" text="Population" />
                       <Tab text="History" />
                     </tabs>
                   </TabPane>
-              </content>
-            </ScrollPane>
+               </children>
+            </VBox>
          </items>
       </SplitPane>
       <Separator prefWidth="200.0">
@@ -64,19 +61,7 @@
          <content>
             <HBox>
                <children>
-                  <ListView fx:id="typesList" prefHeight="180.0" prefWidth="308.0" />
                   <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
-                     <children>
-                        <Label fx:id="unitTypeLabel" prefHeight="17.0" prefWidth="137.0" text="Label" />
-                        <HBox>
-                           <children>
-                              <Label prefWidth="60.0" text="id:" />
-                              <TextField fx:id="typeIdField" HBox.hgrow="ALWAYS" />
-                           </children>
-                        </HBox>
-                        <Label text="description:" VBox.vgrow="ALWAYS" />
-                        <TextArea fx:id="typeDescription" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
-                     </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
