--- a/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Menu?>
@@ -49,20 +48,35 @@
                <children>
                   <VBox fx:id="navigationBar" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefHeight="369.0" prefWidth="130.0" spacing="15.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <Group>
-                           <children>
-                              <Button fx:id="inventoryBtn" disable="true" mnemonicParsing="false" onAction="#showInventory" prefWidth="120.0" text="Inventory" />
-                              <Button fx:id="personsBtn" disable="true" layoutY="42.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPersons" prefWidth="120.0" text="Persons" />
-                              <Button fx:id="subjectsBtn" disable="true" layoutY="84.0" mnemonicParsing="false" onAction="#showSubjects" prefWidth="120.0" text="Subjects" textAlignment="CENTER" />
-                              <Button fx:id="treatmentsBtn" disable="true" layoutY="126.0" mnemonicParsing="false" onAction="#showTreatments" prefWidth="120.0" text="Treatments" />
-                              <Button fx:id="housingUnitsBtn" disable="true" layoutY="168.0" mnemonicParsing="false" onAction="#showHousingUnits" prefWidth="120.0" text="Animal keeping" />
-                           </children>
-                        </Group>
+                        <TitledPane fx:id="inventoryPane" disable="true" expanded="false" onKeyPressed="#showInventory" onMouseClicked="#showInventory" text="Inventory">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                          </content>
+                        </TitledPane>
+                        <TitledPane fx:id="personsPane" disable="true" expanded="false" onKeyPressed="#showPersons" onMouseClicked="#showPersons" text="Persons">
+                           <content>
+                              <VBox prefHeight="200.0" prefWidth="100.0" />
+                           </content>
+                        </TitledPane>
+                        <TitledPane fx:id="subjectsPane" disable="true" expanded="false" onKeyPressed="#showSubjects" onMouseClicked="#showSubjects" text="Subjects">
+                           <content>
+                              <VBox prefHeight="200.0" prefWidth="100.0" />
+                           </content>
+                        </TitledPane>
+                        <TitledPane fx:id="treatmentsPane" disable="true" expanded="false" onKeyPressed="#showTreatments" onMouseClicked="#showTreatments" text="Treatments">
+                           <content>
+                              <VBox prefHeight="200.0" prefWidth="100.0" />
+                           </content>
+                        </TitledPane>
+                        <TitledPane fx:id="animalHousingPane" disable="true" expanded="false" onKeyPressed="#showHousingUnits" onMouseClicked="#showHousingUnits" text="Animal housing">
+                           <content>
+                              <VBox prefHeight="200.0" prefWidth="100.0" />
+                           </content>
+                        </TitledPane>
                         <Separator prefWidth="200.0" />
                         <Separator prefWidth="200.0" />
                         <Button fx:id="addUsrBtn" disable="true" mnemonicParsing="false" onAction="#showUserAddInterface" prefWidth="95.0" text="Add User" />
                         <Separator prefWidth="200.0" />
-                        <VBox fx:id="contextButtonBox" prefHeight="200.0" prefWidth="100.0" />
                         <TitledPane fx:id="findPane" animated="false" disable="true" text="find">
                           <content>
                               <VBox spacing="10.0">
