--- a/database_mockup/src/animalkeeping/ui/fxml/Login.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/Login.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label text="Connect to database">
@@ -26,19 +25,22 @@
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="375.0" minWidth="10.0" prefWidth="371.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="host" />
-            <Label text="user" GridPane.rowIndex="1" />
-            <Label text="password" GridPane.rowIndex="2" />
-            <TextField fx:id="hostField" GridPane.columnIndex="1" />
-            <TextField fx:id="userField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <PasswordField fx:id="passwordField" onInputMethodTextChanged="#passwordEntered" onKeyTyped="#passwordEntered" onAction="#connect"  GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <HBox alignment="CENTER_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Label text="database" />
+            <Label text="host" GridPane.rowIndex="1" />
+            <Label text="user" GridPane.rowIndex="2" />
+            <Label text="password" GridPane.rowIndex="3" />
+            <TextField fx:id="databaseField" GridPane.columnIndex="1" />
+            <TextField fx:id="hostField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="userField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <PasswordField fx:id="passwordField" onAction="#connect" onInputMethodTextChanged="#passwordEntered" onKeyTyped="#passwordEntered" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <HBox alignment="CENTER_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
                   <Button fx:id="connectBtn" mnemonicParsing="false" onAction="#connect" text="connect" />
                </children>
