--- a/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
@@ -75,6 +75,7 @@
                         </TitledPane>
                         <Separator prefWidth="200.0" />
                         <Separator prefWidth="200.0" />
+                        <Button fx:id="databaseUserAddBtn" mnemonicParsing="false" onAction="#showDatabaseUserAddView" text="Add user to database" />
                         <Button fx:id="addUsrBtn" disable="true" mnemonicParsing="false" onAction="#showUserAddInterface" prefWidth="95.0" text="Add User" />
                         <Separator prefWidth="200.0" />
                         <TitledPane fx:id="findPane" animated="false" disable="true" text="find">
